--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,12 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.dll
+*.pdb
+*.dll
+CMS.CommonLib/bin/Debug/CMS.CommonLib.dll
+*.txt
+CMS.CommonLib/obj/Debug/CMS.CommonLib.dll
+*.pdb
+CMS.AdminUI/bin/System.Web.Helpers.xml
+*.xml
