--- a/CMS.AdminUI/bin/CMS.AdminUI.dll.config
+++ b/CMS.AdminUI/bin/CMS.AdminUI.dll.config
@@ -56,9 +56,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="vs:EnableBrowserLink" value="false"/>
     <!-- filestore使用 -->
-    <add key="WebUrl" value="http://localhost:1678/files/"/>
+    <add key="WebUrl" value="http://localhost:1678"/>
     <!-- used by resume -->
-    <add key="UploadPath" value="G:\Pojects\first2015\first2015\DentsuSVN2014\Star.WebUI\Upload\images"/>
+    <add key="UploadPath" value="E:\冀雷飞\EWMS\website"/>
     <add key="ResumeDocUrl" value="http://localhost:2102/Upload/"/>
     <add key="FileExtname" value=".ppt,.pptx,.pdf,.xls,.xlsx,.doc,.docx,.rar,.zip,.png,.bmp,.gif,.jpg,.swf,.wmv,.rmvb,.rm,.flv,.js,.css,.htm,.html"/>
     <!--图片上传 Start-->
