--- a/CMS.AdminUI/bin/CMS.AdminUI.dll.config
+++ b/CMS.AdminUI/bin/CMS.AdminUI.dll.config
@@ -55,10 +55,10 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="vs:EnableBrowserLink" value="false"/>
-    <!-- filestore使用 -->
+    <!-- 网站域名地址 -->
     <add key="WebUrl" value="http://localhost:1678"/>
     <!-- used by resume -->
-    <add key="UploadPath" value="E:\冀雷飞\EWMS\website"/>
+    <add key="UploadPath" value="E:\冀雷飞\EWMS\website\"/>
     <add key="ResumeDocUrl" value="http://localhost:2102/Upload/"/>
     <add key="FileExtname" value=".ppt,.pptx,.pdf,.xls,.xlsx,.doc,.docx,.rar,.zip,.png,.bmp,.gif,.jpg,.swf,.wmv,.rmvb,.rm,.flv,.js,.css,.htm,.html"/>
     <!--图片上传 Start-->
@@ -70,7 +70,8 @@
     <!--图片上传 END-->
     <!--  2011/12/04 add -->
     <!--Include 全局变量文件存放目录-->
-    <add key="IncludePath" value="D:\workspace\test\include"/>
+    <add key="IncludePath" value="E:\冀雷飞\EWMS\website\include"/>
+    <!--网站存放根目录-->
     <add key="SiteAbsolutePath" value="E:\冀雷飞\EWMS\website\"/>
     <!--站点名称-->
     <add key="SiteName" value="梦都酒家(北京)有限公司"/>
