--- a/CMS.AdminUI/Web.config
+++ b/CMS.AdminUI/Web.config
@@ -56,14 +56,14 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="vs:EnableBrowserLink" value="false"/>
     <!-- 网站域名地址 -->
-    <add key="WebUrl" value="http://localhost:1678"/>
+    <add key="WebUrl" value="http://www.mdjj.com:8000"/>
     <!-- used by resume -->
     <add key="UploadPath" value="E:\冀雷飞\EWMS\website\"/>
-    <add key="ResumeDocUrl" value="http://localhost:2102/Upload/"/>
+    <add key="ResumeDocUrl" value="http://www.mdjj.com:8000/Upload/"/>
     <add key="FileExtname" value=".ppt,.pptx,.pdf,.xls,.xlsx,.doc,.docx,.rar,.zip,.png,.bmp,.gif,.jpg,.swf,.wmv,.rmvb,.rm,.flv,.js,.css,.htm,.html"/>
     <!--图片上传 Start-->
     <add key="WarterMarkText" value="梦都酒家"/>
-    <add key="WarterMarkTextUrl" value="www.starlink.com"/>
+    <add key="WarterMarkTextUrl" value="www.mdjj.com"/>
     <add key="WaterMarkLogo" value="/content/images/logo.png"/>
     <add key="SavePath" value="G:\Pojects\first2015\first2015\DentsuSVN2014\Star.WebUI\Upload\images"/>
     <add key="ImgDomain" value="/upload/images"/>
