--- a/CMS.AdminUI/Web.config
+++ b/CMS.AdminUI/Web.config
@@ -56,7 +56,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="vs:EnableBrowserLink" value="false"/>
     <!-- 网站域名地址 -->
-    <add key="WebUrl" value="http://www.mdjj.com:8000"/>
+    <add key="WebUrl" value="http://www.mdjj.com:8000/"/>
     <!-- used by resume -->
     <add key="UploadPath" value="E:\冀雷飞\EWMS\website\"/>
     <add key="ResumeDocUrl" value="http://www.mdjj.com:8000/Upload/"/>
